# maemo-mapper-shmuma

./: Makefile.am  TAGS  autogen.sh  com.nokia.maemo_mapper.service  configure.ac  dpkg-build.sh  maemo-mapper.c  maemo-mapper.desktop  repos-with-layers.txt
data/: Makefile.am  com.gnuite.maemo_mapper.service  maemo-mapper.desktop
data/help/: Makefile.am  tohtml.xsl
data/help/en_US/: maemomapper.xml  maemomapper.xml.in
data/help/fi_FI/: maemomapper.xml  maemomapper.xml.in
data/icons/scalable/: create-btn-icon.sh
debian/: changelog  control  copyright  maemo-mapper.links  postinst  prerm  rules
po/: POTFILES.in  bg_BG.po  de_DE.po  en_US.po  es_ES.po  fi_FI.po  it_IT.po  nl_NL.po  ru_RU.po  sv_SE.po  update-po.sh
src/: Makefile.am  aprs.c  aprs.h  aprs_decode.c  aprs_decode.h  aprs_display.c  aprs_display.h  aprs_kiss.c  aprs_kiss.h  aprs_message.c  aprs_message.h  cmenu.c  cmenu.h  controller.c  controller.h  data.c  data.h  dbus-ifc.c  dbus-ifc.h  defines.h  dialog.c  dialog.h  display.c  display.h  gdk-pixbuf-rotate.c  gdk-pixbuf-rotate.h  gps.c  gps.h  gpsbt.c  gpsbt.h  gpx-full.c  gpx-full.h  gpx.c  gpx.h  hashtable.c  hashtable.h  hashtable_itr.c  hashtable_itr.h  hashtable_private.h  input.c  (+26 more)
