#
# This file is part of maemo-mapper
#
# Copyright (C) 2006 John Costigan.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
#
 
serviceentry_DATA = com.gnuite.maemo_mapper.service

desktopentry_DATA = maemo-mapper.desktop

icon_26x26_DATA = icons/26x26/maemo-mapper.png 
icon_40x40_DATA = icons/40x40/maemo-mapper.png
icon_scalable_DATA = icons/scalable/maemo-mapper.png

helpfile_engb_DATA = help/en_US/maemomapper.xml

EXTRA_DIST = $(serviceentry_DATA) $(desktopentry_DATA) $(icon_26x26_DATA) $(icon_40x40_DATA) $(icon_scalable_DATA) $(helpfile_engb_DATA)
